// Vitest Snapshot v1

exports[`lib/notion/upcoming-week > POST /notion/upcoming-week/:key > adds week based on template and updates button url > append-1 1`] = `
{
  "after": "last-upcoming-id",
  "children": [
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sun, 12/26",
            "text": {
              "content": "Sun, 12/26",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Value 1",
            "text": {
              "content": "Value 1",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Sun task 2",
            "text": {
              "content": "Sun task 2",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Sun conditional task that matches",
            "text": {
              "content": "Sun conditional task that matches",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Mon, 12/27",
            "text": {
              "content": "Mon, 12/27",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Mon Value 2: with a colon",
            "text": {
              "content": "Mon Value 2: with a colon",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Mon task 2",
            "text": {
              "content": "Mon task 2",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Tue, 12/28",
            "text": {
              "content": "Tue, 12/28",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Tue task 1",
            "text": {
              "content": "Tue task 1",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Wed, 12/29",
            "text": {
              "content": "Wed, 12/29",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Wed task 1 (has children)",
            "text": {
              "content": "Wed task 1 (has children)",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
  ],
}
`;

exports[`lib/notion/upcoming-week > POST /notion/upcoming-week/:key > adds week based on template and updates button url > append-2 1`] = `
{
  "after": "nested-parent-id",
  "children": [
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Wed task 2",
            "text": {
              "content": "Wed task 2",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Thu, 12/30",
            "text": {
              "content": "Thu, 12/30",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Thu task 1",
            "text": {
              "content": "Thu task 1",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Fri, 12/31",
            "text": {
              "content": "Fri, 12/31",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Value 3 (suffix)",
            "text": {
              "content": "Value 3 (suffix)",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sat, 1/1",
            "text": {
              "content": "Sat, 1/1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Sat task 1",
            "text": {
              "content": "Sat task 1",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Sat task 2",
            "text": {
              "content": "Sat task 2",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
  ],
}
`;

exports[`lib/notion/upcoming-week > POST /notion/upcoming-week/:key > adds week based on template and updates button url > button 1`] = `
{
  "embed": {
    "caption": [],
    "url": "https://proxy.crbapps.com/notion/upcoming-week/key?addFollowingWeekButtonId=button-id&notionToken=notion-token&startDate=2022-01-02T12:00:00.000Z&upcomingId=upcoming-id&weekTemplatePageId=week-template-id",
  },
  "object": "block",
  "type": "embed",
}
`;

exports[`lib/notion/upcoming-week > POST /notion/upcoming-week/:key > adds week based on template and updates button url > nested 1`] = `
{
  "children": [
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Task 1",
            "text": {
              "content": "Task 1",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "color": "default",
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Task 2",
            "text": {
              "content": "Task 2",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
  ],
}
`;

exports[`lib/notion/upcoming-week > POST /notion/upcoming-week/:key > gracefully handles absence of button block and variables block > append-1 1`] = `
{
  "children": [
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Sun, 12/26",
            "text": {
              "content": "Sun, 12/26",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "\${var1}",
            "text": {
              "content": "\${var1}",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Sun task 2",
            "text": {
              "content": "Sun task 2",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Sun conditional task that matches",
            "text": {
              "content": "Sun conditional task that matches",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Mon, 12/27",
            "text": {
              "content": "Mon, 12/27",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "bulleted_list_item": {
        "rich_text": [
          {
            "plain_text": "Mon \${var2}",
            "text": {
              "content": "Mon \${var2}",
            },
            "type": "text",
          },
        ],
      },
      "object": "block",
      "type": "bulleted_list_item",
    },
  ],
}
`;
